--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "react-native-bleManager-sdk",
+  "name": "@nishit_chauhan/react-native-ble-sdk",
   "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "ble sdk",
   "main": "src/index.ts",
   "scripts": {
